# file-organizer

./: .gitignore  README.md  cron-weekly.sh  pyproject.toml  run-scheduled.sh
config/: default_rules.yaml  workspace_rules.yaml
docs/: risks.md
docs/progress/: weekly-progress-20260619.md  weekly-progress-20260626.md
organizer/: __init__.py  analyzer.py  cli.py  executor.py  logger.py  planner.py  rules.py  safety.py  undo.py
tests/: test_analyzer.py  test_cli.py  test_executor.py  test_logger.py  test_planner.py  test_rules.py  test_safety.py  test_undo.py
